# doc-chat

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  tasks.py
app/chat/: __init__.py  chat.py  create_embeddings.py
app/chat/llms/: chatopenai.py
app/chat/memories/: sql_memory.py
app/chat/models/: __init__.py
app/chat/vector_stores/: chromadb.py
app/web/: __init__.py  api.py  files.py  hooks.py
app/web/config/: __init__.py
app/web/db/: __init__.py
app/web/db/models/: conversation.py  pdf.py  user.py
app/web/tasks/: embeddings.py
app/web/views/: conversation_views.py  file_views.py  pdf_views.py  score_views.py
client/: tailwind.config.js
client/src/: app.css
client/src/components/: Button.svelte  ConfirmModal.svelte  DocChatLogo.svelte  Navbar.svelte  PdfViewer.svelte  TextInput.svelte
client/src/components/auth/: AuthLinks.svelte
client/src/components/chat/: AssistantMessage.svelte  ChatInput.svelte  ChatList.svelte  ChatPanel.svelte  ConversationSelect.svelte  UserMessage.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/auth/signin/: +page.svelte
client/src/routes/auth/signup/: +page.svelte
client/src/routes/documents/: +page.svelte
client/src/routes/documents/[id]/: +page.svelte
client/src/routes/documents/new/: +page.svelte
client/src/store/: documents.ts
