[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-chat"
version = "0.1.0"
description = "A document chat application with AI-powered conversations"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Sagar Garg", email = "gargsaar@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "boto3==1.26.122",
    "botocore==1.29.122",
    "celery==5.3.1",
    "click==8.1.3",
    "Flask==2.3.1",
    "flask_sqlalchemy==3.0.3",
    "flask_cors==4.0.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.19",
    "openai>=1.10.0,<2.0.0",
    "python-dotenv==1.0.0",
    "Werkzeug==2.3.1",
    "invoke==2.2.0",
    "pinecone-client==3.2.2",
    "pypdf==3.15.4",
    "watchdog==3.0.0",
    "langchain-core>=0.1.16,<1.0.0",
    "redis==5.0.0",
    "chromadb>=0.4.22",
    "gunicorn>=20.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/gargsaar/doc-chat"
Repository = "https://github.com/gargsaar/doc-chat"
Issues = "https://github.com/gargsaar/doc-chat/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
